--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Security.Claims
+@* @model AutoPartsHub.Models.CheckoutViewModel *@
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +15,7 @@
 	<meta property="og:description" content="AutoPartsHub - Restaurant Bootstrap Admin Dashboard + FrontEnd" />
 	<meta property="og:image" content="https://davur.dexignzone.com/xhtml/page-error-404.html" />
 	<meta name="format-detection" content="telephone=no">
-    <title>AutoPartsHub - Restaurant Bootstrap Admin Dashboard + FrontEnd </title>
+    <title>AutoPartsHub Admin Side </title>
     <!-- Favicon icon -->
     <link href="~/css/site.css" rel="stylesheet" />
 	<link rel="icon" type="/adminassets/image/png" sizes="16x16" href="./adminassets/images/favicon.png">
@@ -618,72 +619,22 @@
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <div id="DZ_W_Notification1" class="widget-media dz-scroll p-3" style="height:380px;">
 										<ul class="timeline">
-											<li>
-												<div class="timeline-panel">
-													<div class="media me-2">
-														<img alt="image" width="50" src="/adminassets/images/avatar/1.jpg">
+										@* 	@foreach (var item in Model.ContactList)
+											{
+												<li>
+													<div class="timeline-panel">
+														<div class="media me-2">
+															<img alt="image" width="50" src="/adminassets/images/avatar/1.jpg">
+														</div>
+														<div class="media-body">
+															<h6 class="mb-1">@item.ContectUsName</h6>
+															<small class="d-block">29 July 2020 - 02:26 PM</small>
+														</div>
 													</div>
-													<div class="media-body">
-														<h6 class="mb-1">Dr sultads Send you Photo</h6>
-														<small class="d-block">29 July 2020 - 02:26 PM</small>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="timeline-panel">
-													<div class="media me-2 media-info">
-														KG
-													</div>
-													<div class="media-body">
-														<h6 class="mb-1">Resport created successfully</h6>
-														<small class="d-block">29 July 2020 - 02:26 PM</small>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="timeline-panel">
-													<div class="media me-2 media-success">
-														<i class="fa fa-home"></i>
-													</div>
-													<div class="media-body">
-														<h6 class="mb-1">Reminder : Treatment Time!</h6>
-														<small class="d-block">29 July 2020 - 02:26 PM</small>
-													</div>
-												</div>
-											</li>
-											 <li>
-												<div class="timeline-panel">
-													<div class="media me-2">
-														<img alt="image" width="50" src="/adminassets/images/avatar/1.jpg">
-													</div>
-													<div class="media-body">
-														<h6 class="mb-1">Dr sultads Send you Photo</h6>
-														<small class="d-block">29 July 2020 - 02:26 PM</small>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="timeline-panel">
-													<div class="media me-2 media-danger">
-														KG
-													</div>
-													<div class="media-body">
-														<h6 class="mb-1">Resport created successfully</h6>
-														<small class="d-block">29 July 2020 - 02:26 PM</small>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="timeline-panel">
-													<div class="media me-2 media-primary">
-														<i class="fa fa-home"></i>
-													</div>
-													<div class="media-body">
-														<h6 class="mb-1">Reminder : Treatment Time!</h6>
-														<small class="d-block">29 July 2020 - 02:26 PM</small>
-													</div>
-												</div>
-											</li>
+												</li>
+											}
+ *@
+
 										</ul>
 									</div>
                                     <a class="all-notification" href="#">See all notifications <i class="ti-arrow-right"></i></a>
@@ -697,18 +648,18 @@
 									<div class="header-info">
 										<span>Hello, <strong>@name</strong></span>
 									</div>
-                                    <img src="/adminassets/images/profile/pic1.jpg" width="20" alt=""/>
+                                    @* <img src="/adminassets/images/profile/pic1.jpg" width="20" alt=""/> *@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a href="app-profile.html" class="dropdown-item ai-icon">
+                                    <a asp-controller="Home" asp-action="MyAccount" class="dropdown-item ai-icon">
                                         <svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
                                         <span class="ms-2">Profile </span>
                                     </a>
-                                    <a href="email-inbox.html" class="dropdown-item ai-icon">
+                                  @*   <a href="email-inbox.html" class="dropdown-item ai-icon">
                                         <svg id="icon-inbox" xmlns="http://www.w3.org/2000/svg" class="text-success" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                                         <span class="ms-2">Inbox </span>
-                                    </a>
-									<a href="Logout" class="dropdown-item ai-icon">
+                                    </a> *@
+										<a href="/Logout/" class="dropdown-item ai-icon">
                                         <svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
 										<span class="ms-2">Logout </span>
                                     </a>
